--- a/Week 2/Tuesday/LLamaIndex RAQA Tool (Assignment Version).ipynb
+++ b/Week 2/Tuesday/LLamaIndex RAQA Tool (Assignment Version).ipynb
@@ -153,7 +153,7 @@
     "import os\n",
     "import getpass\n",
     "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\"\n",
     "\n",
     "import openai\n",
     "openai.api_key = os.environ[\"OPENAI_API_KEY\"]"
