Update Agent Powered Barbenheimer Application-Solution.ipynb

--- a/Week 1/Thursday/Agent Powered Barbenheimer Application-Solution.ipynb
+++ b/Week 1/Thursday/Agent Powered Barbenheimer Application-Solution.ipynb
@@ -64,7 +64,7 @@
     "import getpass\n",
     "import os\n",
     "# openai_api_key = getpass.getpass(\"Enter your OpenAI API Key: \")\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"\""
    ]
   },
   {
